--- a/styles.css
+++ b/styles.css
@@ -2,28 +2,30 @@
   padding-left: 0;
   padding-right: 0;
 }
-.create-card-setting-wrapper h1 {
+.create-card-setting-wrapper h1.community-item-name {
   margin-bottom: 0;
   padding: 0.25em 0;
   position: relative;
   top: -0.5em;
   display: inline-block;
 }
-.create-card-setting-wrapper .has-furigana h1 {
-  top: -0.75em;
-  padding: 0;
-}
 .create-card-setting-wrapper h1.solution-header {
   font-size: 1.5em;
   font-weight: normal;
 }
+.create-card-setting-wrapper .has-furigana h1 {
+  top: -0.75em;
+  padding: 0;
+}
+.create-card-setting-wrapper p.parts-of-speech {
+  font-style: italic;
+  font-size: var(--font-ui-smaller);
+  line-height: var(--line-height-tight);
+  margin-bottom: 0;
+}
 .create-card-setting-wrapper p,
 .create-card-setting-wrapper ul {
   margin-block-start: 0.4em;
-}
-.create-card-setting-wrapper .parts-of-speech {
-  font-size: var(--font-ui-smaller);
-  line-height: var(--line-height-tight);
 }
 
 /*# sourceMappingURL=styles.css.map */
