--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,13 @@
   margin-block-end: 0.4em;
 }
 
-.custom-definitions {
+.nested-setting-wrapper {
+  padding-top: 0.75em;
+}
+.nested-setting-wrapper:not(:first-child) {
+  border-top: 1px solid var(--background-modifier-border);
+}
+.nested-setting-wrapper .setting-item {
   border-top: none;
 }
 
