--- a/styles.css
+++ b/styles.css
@@ -1,84 +1,38 @@
-.create-card-setting-wrapper {
+.page-modal-wrapper {
   padding-left: 0;
   padding-right: 0;
 }
-.create-card-setting-wrapper h1.community-item-name {
+.page-modal-wrapper h1.community-item-name {
   margin-bottom: 0;
   padding: 0.25em 0;
   position: relative;
   top: -0.5em;
   display: inline-block;
 }
-.create-card-setting-wrapper h1.solution-header {
+.page-modal-wrapper h1.solution-header {
   font-size: 1.5em;
   font-weight: normal;
 }
-.create-card-setting-wrapper .has-furigana h1 {
+.page-modal-wrapper .search-result-has-furigana h1 {
   top: -0.75em;
   padding: 0;
 }
-.create-card-setting-wrapper p.parts-of-speech {
+.page-modal-wrapper p.parts-of-speech {
   font-size: var(--font-ui-smaller);
   line-height: var(--line-height-tight);
 }
-.create-card-setting-wrapper.community-modal-search-results p.parts-of-speech {
+.page-modal-wrapper.community-modal-search-results p.parts-of-speech {
   margin-bottom: 0;
 }
-.create-card-setting-wrapper.community-modal-search-results p,
-.create-card-setting-wrapper.community-modal-search-results ul {
+.page-modal-wrapper.community-modal-search-results p,
+.page-modal-wrapper.community-modal-search-results ul {
   margin-block-start: 0.4em;
 }
-.create-card-setting-wrapper .solution-header-wrapper {
-  display: flex;
-  align-items: center;
-  margin-block-end: var(--p-spacing);
-}
-.create-card-setting-wrapper .solution-header-wrapper h1 {
-  margin: 0;
-}
-.create-card-setting-wrapper .solution-header-wrapper .pitch-wrapper {
-  margin-top: 0.8em;
-  margin-left: 1em;
-}
-.create-card-setting-wrapper .solution-header-wrapper .pitch-wrapper h2 {
-  font-size: 1.2em;
-  font-weight: normal;
-  margin: 0;
-}
-.create-card-setting-wrapper .solution-header-wrapper .pitch-wrapper h2 .pitch-low {
-  border-bottom: 1px var(--ax3) solid;
-}
-.create-card-setting-wrapper .solution-header-wrapper .pitch-wrapper h2 .pitch-high {
-  border-left: 1px var(--ax3) solid;
-  border-top: 1px var(--ax3) solid;
-}
-.create-card-setting-wrapper .solution-header-wrapper .pitch-wrapper h2 .pitch-drop {
-  border-right: 1px var(--ax3) solid;
-}
-.create-card-setting-wrapper .solution-header-wrapper .pitch-wrapper h2 span {
-  padding: 0.25em;
-}
-.create-card-setting-wrapper .solution-header-wrapper .audio-wrapper {
-  display: flex;
-  align-items: center;
-  margin: 0.8em 0 0 0.8em;
-}
-.create-card-setting-wrapper .solution-header-wrapper .audio-wrapper i {
-  font-size: 0.95em;
-  padding: 25%;
-  cursor: pointer;
-}
-.create-card-setting-wrapper .metadata-property-value {
+.page-modal-wrapper .metadata-property-value {
   margin-top: 0.8em;
 }
-.create-card-setting-wrapper .multi-select-container {
+.page-modal-wrapper .multi-select-container {
   padding: 0;
-}
-.create-card-setting-wrapper .solution-card-wrapper {
-  padding-bottom: 1em;
-}
-.create-card-setting-wrapper .solution-card-wrapper ul {
-  margin-block-end: 0.4em;
 }
 
 .nested-setting-wrapper {
@@ -89,6 +43,208 @@
 }
 .nested-setting-wrapper .setting-item {
   border-top: none;
+}
+
+.card-suggest-pos {
+  font-style: italic;
+  color: var(--text-muted);
+}
+
+.solution-header-wrapper {
+  display: flex;
+  align-items: center;
+  margin-block-end: var(--p-spacing);
+}
+.solution-header-wrapper h1 {
+  margin: 0;
+}
+
+.solution-audio-wrapper {
+  display: flex;
+  align-items: center;
+  margin: 0.8em 0 0 0.8em;
+}
+.solution-audio-wrapper i {
+  font-size: 0.95em;
+  padding: 25%;
+  cursor: pointer;
+}
+
+.flashcard-solution {
+  padding: var(--size-4-5);
+}
+.flashcard-solution .review-card-row-wrapper {
+  border-top: 1px solid var(--background-modifier-border);
+  padding: 1em 0;
+}
+.flashcard-solution .review-card-header-wrapper {
+  padding: 2.5em 0;
+}
+.flashcard-solution .review-card-header-wrapper .solution-header-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0;
+}
+.flashcard-solution .review-card-header-wrapper h1.solution-header {
+  font-size: 250%;
+  padding-bottom: 1em;
+}
+.flashcard-solution .review-card-header-wrapper h1.solution-header rt {
+  font-size: 40%;
+}
+.flashcard-solution .review-card-header-wrapper .solution-subheader-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.flashcard-solution .review-card-header-wrapper .solution-subheader-wrapper .solution-pitch-wrapper {
+  margin: 0;
+}
+.flashcard-solution .review-card-header-wrapper .solution-subheader-wrapper .solution-audio-wrapper {
+  margin-left: 1em;
+}
+.flashcard-solution .setting-item {
+  border: none;
+  padding: 0;
+}
+.flashcard-solution .review-card-primary-wrapper {
+  padding: 1em 0;
+}
+.flashcard-solution .review-card-primary-wrapper .parts-of-speech-wrapper {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+}
+.flashcard-solution .review-card-primary-wrapper .parts-of-speech-wrapper .parts-of-speech {
+  margin-top: 0;
+}
+.flashcard-solution .review-card-primary-wrapper ul {
+  margin: 0;
+}
+.flashcard-solution .solution-audio-wrapper {
+  margin-top: 0;
+  font-size: 85%;
+}
+
+.review-card-sentence-wrapper ul {
+  margin: 0;
+}
+.review-card-sentence-wrapper li:not(:first-child) {
+  margin-top: 1em;
+}
+.review-card-sentence-wrapper li .solution-sentence-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.review-card-sentence-wrapper li .solution-sentence-wrapper .setting-item {
+  padding-top: 0;
+}
+.review-card-sentence-wrapper li .solution-sentence-furigana-wrapper {
+  width: fit-content;
+}
+.review-card-sentence-wrapper li .solution-sentence-furigana-wrapper .solution-sentence-furigana:hover {
+  text-decoration: underline;
+  text-underline-offset: 0.3em;
+  cursor: help;
+}
+.review-card-sentence-wrapper li .solution-sentence-furigana-wrapper .solution-audio-wrapper {
+  display: inline-flex;
+  margin-left: 0;
+}
+.review-card-sentence-wrapper li .solution-sentence-translation {
+  font-style: italic;
+  margin-top: 0.15em;
+  color: var(--text-muted);
+}
+.review-card-sentence-wrapper li p {
+  margin: 0;
+}
+
+.review-card-conjugations h3 {
+  margin: 0;
+  padding-top: 1em;
+}
+
+.review-card-tags-wrapper .multi-select-pill-content {
+  margin-right: var(--pill-padding-x);
+}
+.review-card-tags-wrapper:last-child {
+  padding-bottom: 0;
+}
+
+.review-card-tags-wrapper.metadata-property-value {
+  margin-top: 0;
+}
+
+.review-card-conjugation {
+  display: flex;
+  padding-bottom: 1.5em;
+}
+.review-card-conjugation .callout {
+  padding-left: var(--size-4-3);
+  margin-bottom: 0;
+}
+.review-card-conjugation > div {
+  min-width: calc(50% - var(--size-4-3) / 2);
+  width: 100%;
+}
+.review-card-conjugation > div:nth-child(2) {
+  margin-left: var(--size-4-3);
+}
+.review-card-conjugation > div > div {
+  display: flex;
+  justify-content: space-between;
+}
+.review-card-conjugation > div > div:nth-child(2) {
+  margin-top: 1em;
+}
+.review-card-conjugation > div > div > p {
+  display: inline-block;
+  margin: 0;
+}
+.review-card-conjugation > div > div .flair.mod-flat {
+  margin: 0;
+}
+
+.no-button-page-modal .button-wrapper {
+  display: none;
+}
+
+.solution-pitch-wrapper {
+  margin-top: 0.8em;
+  margin-left: 1em;
+}
+.solution-pitch-wrapper h2 {
+  font-size: 1.2em;
+  font-weight: normal;
+  margin: 0;
+}
+.solution-pitch-wrapper h2 span {
+  padding: 0.25em;
+  display: inline-block;
+}
+
+.pitch-low {
+  border-bottom: 1px var(--ax3) solid;
+}
+
+.pitch-high {
+  border-left: 1px var(--ax3) solid;
+  border-top: 1px var(--ax3) solid;
+}
+
+.pitch-drop {
+  border-right: 1px var(--ax3) solid;
+}
+
+.hidden {
+  display: none;
+}
+
+.top-border {
+  border-top: 1px solid var(--background-modifier-border);
 }
 
 /*# sourceMappingURL=styles.css.map */
